--- a/public/css/home.css
+++ b/public/css/home.css
@@ -55,7 +55,13 @@
     border: 1px solid rgba(51, 54,63,1);
     background-color: white;
 }
-
+.navs .SignOutBtn{
+    width: 100px;
+    height: 38px;
+    border-radius: 40px;
+    border: 1px solid rgba(51, 54,63,1);
+    background-color: white;
+}
 .composeOverlay{
     display: none;
     position: fixed;
